# c_fast_timer

./: CMakeLists.txt  README.md  build.cmd  run.cmd  test.cmd
source/: ftimer.h  stopwatch.h  timeanalyzer.h
source/private/: ftimer.c  stopwatch.c  timeanalyzer.c
test/: main.cpp  test_ftimer.cpp  test_stopwatch.cpp
